[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pibooth_delayed_google_sync"
version = "1.7.0"
description = "Plugin Pibooth pour la synchronisation différée vers Google Photos"
authors = [
    { name="Stephane", email="stephane.pottier.54@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "pibooth>=2.0.0"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.entry-points."pibooth"]
delayed_google_sync = "pibooth_delayed_google_sync"
